--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@iconify/react": "^6.0.0",
     "@reduxjs/toolkit": "^2.8.2",
+    "axios": "^1.10.0",
     "lucide-react": "^0.525.0",
     "next": "15.4.1",
     "react": "19.1.0",
